# llm-loop-lite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: nightly-release.yml
internal/prompt/: cron.md  system.md
src/: context_window.rs  context_window_test.rs  error.rs  home.rs  home_test.rs  ids.rs  ids_test.rs  lib.rs  logger.rs  main.rs  plan_store.rs  resource.rs  session_store.rs  session_store_test.rs  skills.rs  skills_test.rs  store.rs  store_test.rs
src/channel/: attachments.rs  builtin.rs  capability.rs  mod.rs  qq.rs  qq_test.rs  telegram.rs  telegram_test.rs
src/channel/feishu/: api.rs  api_test.rs  event.rs  event_test.rs  mod.rs  mod_test.rs  ws_frame.rs
src/cli/: cli_test.rs  doctor.rs  mod.rs  resources.rs
src/config/: config_test.rs  mod.rs
src/context/: agents.rs  agents_test.rs  mems.rs  mems_test.rs  mod.rs  skills.rs  skills_test.rs  system.rs  system_test.rs
src/daemon/: mod.rs  resources.rs
src/internal/skills/__mem/: SKILL.md
src/message/: message_test.rs  mod.rs
src/provider/: limits.rs  limits_test.rs  mod.rs
src/provider/claude/: client.rs  client_test.rs  mod.rs
src/provider/codex/: auth.rs  auth_test.rs  login.rs  login_test.rs  mod.rs  telemetry.rs  telemetry_test.rs  tool_output_test.rs
src/scheduler/: mod.rs  scheduler_test.rs
src/session/: mod.rs  session_test.rs
src/tools/: AGENTS.md  mod.rs  registry.rs  spec.rs  spec_test.rs
src/tools/builtins/: context.rs  cron.rs  cron_test.rs  image.rs  mod.rs  patch.rs  plan.rs  plan_list.rs  plan_list_test.rs  shell.rs  sleep.rs  user_input.rs  web.rs
(+7 files in other folders)
