[package]
name = "llm-loop"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
mime_guess = "2.0.5"
prost = "0.14.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7.17"
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }
uuid = { version = "1.23.3", default-features = false, features = ["std", "v4"] }

[dev-dependencies]
filetime = "0.2.26"
